|
Quick Lists
|
|
Bug ID:
|
6791656
|
|
Votes
|
0
|
|
Synopsis
|
nsk defclass0 asserts handles.hpp
|
|
Category
|
hotspot:runtime_system
|
|
Reported Against
|
|
|
Release Fixed
|
7(b47),
hs15(b01) (Bug ID:2173034)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
2-High
|
|
Related Bugs
|
4670071
|
|
Submit Date
|
08-JAN-2009
|
|
Description
|
Runtime nightly test before pushing to main/baseline crashed on all platforms running defclass001. Fastdebug asserts in handles.hpp, "resolving NULL handle".
Posted Date : 2009-01-08 19:59:46.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
Critical to fix before pushing to main/baseline.
Posted Date : 2009-01-08 19:59:46.0
http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/a0401dc51d0b
Posted Date : 2009-01-08 23:47:29.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |