6791656: nsk defclass0 asserts handles.hpp

Reviewed-by: phh, xlu